# pydata-agentic-2025

./: .env.example  .gitignore  README.md  pyproject.toml
exercises/: E1 Introduction to LLMs and Agents.ipynb  E2 Introduction to Multi-Agent systems.ipynb
solutions/: S1 Introduction to LLMs and Agents.ipynb  S2 Introduction to Multi-Agent systems.ipynb
src/: yfinance_tool.py
