[project]
name = "financial-advisor"
version = "0.1.0"
description = "Building a Financial Advisor with LangChain: From GPT to Multi-Agent Systems"
authors = [
    { name = "Lucas Eckes", email = "lucas.eckes@visium.com" },
    { name = "Alejandro Bonell", email = "alejandro.bonell@visium.com" },
    { name = "Younes Moussaif", email = "younes.moussaif@visium.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "yfinance>=0.2.0",
    "pydantic>=2.0.0",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "ipython>=8.32.0",
    "langgraph>=0.4.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.15.0", "ruff>=0.9.6"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data/", "notebooks/"]
